--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,293 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+@@media (max-width: 500px){
+    width: 75%;
+
+}
+body {
+	background-color:white;
+}
+.container {
+width: 1000px;
+margin: 0 auto;
+background-color: white;
+
+}
 
 
+
+#header{
+display: flex;
+
+/* margin: 0px 0px 60px 0px; */
+/* text-align: center; */
+width: 100%;
+/* padding: 10px 0px; */
+
+
+}
+
+#nav-menu, #nav-logo{
+/* display: flex; */
+margin-left: 50px;
+/* vertical-align: middle; */
+
+
+}
+#nav-menu{
+/* padding: 0px 100px 0px 0px; */
+/* margin: 0px; */
+/*Test code*/
+
+display: flex;
+justify-content: space-between;
+width: 100%;
+
+}
+nav a {
+/* padding: 30px; */
+color: black;
+text-decoration: none;
+}
+
+/* Begin top logo/button styling*/
+
+#section1 {
+	margin-top: 20px;
+	display: flex;	
+	justify-content: space-between;
+	
+}
+#huge {
+
+	display: flex;
+	font-size: 75px;
+	width: 325px;
+	margin-left: 200px;
+
+}
+
+#sub-logo {
+	display: flex;
+	
+}
+
+#button1 {
+	border: solid black 1px;
+	display: flex;
+	margin-left: 315px;
+	background: white;
+}
+
+/* #section1{
+width:100%;
+padding: 10px 0px;
+text-align: center;
+margin: 0px 0px 100px 0px;
+}
+#sub, #sub-logo{
+display: inline-block;
+vertical-align: middle;
+margin-top: 100px;
+}
+#sub {
+font-size: 75px;
+margin:0px;
+padding: 0px;
+} */
+
+.wrapper {
+	
+	display: flex;
+	
+	padding-bottom: 50px;
+	
+	padding-top: 50px;
+	
+}
+/*.sectionblock2 {
+	border: solid red 4px;
+	display:flex;
+	align-content: stretch;
+}*/
+.section-block2 {
+	
+	display: flex;
+	flex-direction: row;	
+	padding-top: 50px;
+	
+}
+.large-headers {
+	padding-left: 20px;
+	
+}
+.section-block1 {
+
+	display: flex;
+	flex-direction: row;
+	
+
+}
+small-header {
+	display: flex;
+	flex-direction: column;
+	
+	
+}
+.smaller-headers {
+	display: flex;
+	flex-direction: row;
+	
+}
+.bottom-rows{
+	display: flex;
+	flex-direction: column;
+}
+.copyright {
+	
+	margin-left: 350px;
+}
+
+
+
+/* SERVICES PAGE CODE STARTS HERE */
+
+
+
+
+
+.services {
+	margin-left: 40px;
+	padding-right: 10px;
+	
+	padding-bottom: 50px;
+
+}	
+.container-block {
+
+	max-width: 1000px;
+	border: solid green 4px;
+	padding: 20px 20px;
+	
+}
+
+.services-body{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	border-top: solid black;
+	border-bottom: solid black;
+	padding-top: 30px;
+	padding-bottom: 50px;
+	margin: 0 auto;
+	
+}
+.services-header-img {
+	
+	display: inline-block;
+	margin-left: 40px;	
+}
+.services-boxes {
+	border: solid black 1px;
+	width: 400px;
+	margin: 2% 0;
+	background-color:  #F5F5F5;
+	padding: 15px;
+
+}
+
+.button{
+	display: inline-block;
+	border: 1px solid black;
+	border-radius: 5px;
+	margin: 15px 0px 10px 10px;
+	padding: 5px;
+	background-color:  #F5F5F5;
+}
+.fun-facts {
+	
+display: flex;
+flex-direction: row;
+padding-top: 50px;
+/* width: 1000px;margin-left: 200px; */
+
+flex-wrap: wrap;
+	/* width: 1000px;
+	justify-content: center;
+	margin-left: 195px; */
+}
+.cool-list {
+	display:flex;
+	flex-direction: column;
+	width: 500px;
+	
+}
+.copyright2 {
+	display: inline-block;
+	margin-left: 350px;
+	padding: 100px 0px 50px 0px;
