--- a/css/index.css
+++ b/css/index.css
@@ -63,65 +63,25 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
-@media (max-width: 800px) {
-     body {
-
-      background-color: black;
-      border: solid red 4px; 
-        }
-        
-      .container{
-		margin: 0 auto;
-		display: block;
-        width: 100%;
-     
-	  }
-	  #nav-menu {
-        display: flex;
-      flex-direction: column;
-		width: 100%;
-		height: 300px;
-		align-items: center;
-        align-content: space-between;
-      } 
-
-      a {
-          border-bottom: rgb(3, 1, 1) solid 4px;
-          width: 800px;
-          padding-bottom:  30px;
-          margin-top: 30px;
-      }
-      
-	  #header {
-        display: flex;
-        
-		justify-content: center;
-		width: 100%;
-		height: 500px;
-		text-align: center;
-        vertical-align: middle;
-
-    }
-	  }
-	  #spaceholder {
+#spaceholder {
 		display: flex;
 		width: 100%;
 		flex-wrap:wrap;
 		padding-bottom: 30px;
 	  }
-	  #section1 {
+#section1 {
 		display:  flex;
 		width: 100%;
 		height: 300px;
 	  }
-	  #footer {
+#footer {
 		display:flex;
+		flex-direction: column;
 		justify-content: center;
 		align-content: flex-end;
 		width: 100%;
 		height: 50px;
-		text-align: center;
+		
 	  }
 
 
@@ -186,7 +146,11 @@ text-decoration: none;
 	margin-top: 20px;
 	display: flex;	
 	justify-content: space-between;
+
 	
+}
+#mobile-button   {
+	display: none;
 }
 #huge {
 
@@ -194,18 +158,14 @@ text-decoration: none;
 	font-size: 75px;
 	width: 325px;
 	margin-left: 200px;
+	justify-content: center;
 
-}
-
-#sub-logo {
-	display: flex;
-	
 }
 
 #button1 {
-	border: solid black 1px;
+	border: solid black 3px;
 	display: flex;
-	margin-left: 315px;
+	margin-left: 215px;
 	background: white;
 }
 
@@ -280,79 +240,135 @@ small-header {
 
 
 
-/* SERVICES PAGE CODE STARTS HERE */
 
+	/*start @media max-width 800px */
 
+@media (max-width: 800px) {
+	body {
 
-
-
-.services {
-	margin-left: 40px;
-	padding-right: 10px;
-	
-	padding-bottom: 50px;
-
-}	
-.container-block {
-
-	max-width: 1000px;
-	border: solid green 4px;
-	padding: 20px 20px;
-	
+	 background-color: black;
+	 
+}
+	   
+	   .nav-logo {
+		   display: flex;
 }
 
-.services-body{
+	 .container{		  
+	   margin: 0 auto;
+	   display: block;
+	   width: 100%;
+	   flex-direction: column-reverse;
+
+}
+.mobile-logo-box {
+	border-bottom: rgb(3, 1, 1) solid 2px ;
+	width: 800px;
+	padding: 0px 0px 30px 0px;
+}
+	 .mobile-logo {
+	
+		
+		 padding-bottom:  30p	x;
+		 margin-top: 30px;
+ }
+ #huge {
+	 margin-left: 100px;
+	 justify-content: center;
+ }
+	 #nav-menu {
+	   display: flex;
+		 flex-direction: column;
+	   width: 100%;
+	   height: 300px;
+	   align-items: center;
+	   align-content: space-between;
+} 
+	
+	.logo {
+		display:none;
+		
+}
+
+	 a {
+		 border-bottom: rgb(3, 1, 1) solid 2px;
+		 width: 800px;
+		 padding-bottom:  30px;
+		 margin-top: 30px;
+ }
+	#button1 {
+   
+			display: none;
+			}
+	#mobile-button {
+		border: solid black 2px;
+		margin-left: 110px;
+		background: white;
+		padding: 8px 54px 10px 54px;
+	}			
+	 
+	 #header {
+	   display: flex;
+	   justify-content: center;
+	   width: 100%;
+	   height: 500px;
+	   text-align: center;
+	   vertical-align: middle;
+	   }
+
+   .image1 {
+	   display: none;
+	   }
+
+	#spaceholder{ 
+		display: flex;
+	   flex-direction: column;
+	   margin-top: 100px;
+	   justify-content: center;
+	   
+	   }
+	   /*need to fix middle image logo */
+	   .wrapper2 {
+		justify-content: center:
+		width: 90%;
+	   }
+	.middle-img img {
+		justify-content: center:
+		width: 90%;
+	}
+	.section-block1 {
+		display: flex;
+		flex-direction: column;
+	}
+	.large-headers {
+		margin-top: 40px;
+	}
+
+
+  .section-block2 {
+	  display: flex;
+	  flex-direction: column;
+  }
+  .bottom-rows { 
+	  margin-top: 40px;
+	  margin-left: 30px;
+	  margin-right: 30px;
+	}
+
+#footer {
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	border-top: solid black;
-	border-bottom: solid black;
-	padding-top: 30px;
-	padding-bottom: 50px;
-	margin: 0 auto;
-	
+	flex-direction: column;	
+	margin-top: 200px;
+	margin-left: 30px;
 }
-.services-header-img {
-	
-	display: inline-block;
-	margin-left: 40px;	
+.copyright {
+	margin-top: 40px;
+	margin-left: 185px;
 }
-.services-boxes {
-	border: solid black 1px;
-	width: 400px;
-	margin: 2% 0;
-	background-color:  #F5F5F5;
-	padding: 15px;
 
 }
 
-.button{
-	display: inline-block;
-	border: 1px solid black;
-	border-radius: 5px;
-	margin: 15px 0px 10px 10px;
-	padding: 5px;
-	background-color:  #F5F5F5;
-}
-.fun-facts {
-	
-display: flex;
-flex-direction: row;
-padding-top: 50px;
-/* width: 1000px;margin-left: 200px; */
 
-flex-wrap: wrap;
-	/* width: 1000px;
-	justify-content: center;
-	margin-left: 195px; */
-}
-.cool-list {
-	display:flex;
-	flex-direction: column;
-	width: 500px;
-	
-}
-.copyright2 {
-	display: inline-block;
-	margin-left: 350px;
-	padding: 100px 0px 50px 0px;
+
+
+/* end of 800px media */
